crates/aiken-lang/src/snapshots/parse_unicode_offset_2.snap
---
source: crates/aiken-lang/src/parser.rs
description: "Code:\n\nfn foo() {\n  let x = \"*\"\n  x\n}\n"
---
Module {
    name: "",
    docs: [],
    type_info: (),
    definitions: [
        Fn(
            Function {
                arguments: [],
                body: Sequence {
                    location: 13..28,
                    expressions: [
                        Assignment {
                            location: 13..24,
                            value: ByteArray {
                                location: 21..24,
                                bytes: [
                                    (
                                        42,
                                        0..0,
                                    ),
                                ],
                                preferred_format: Utf8String,
                            },
                            patterns: [
                                AssignmentPattern {
                                    pattern: Var {
                                        location: 17..18,
                                        name: "x",
                                    },
                                    annotation: None,
                                    location: 17..18,
                                },
                            ],
                            kind: Let {
                                backpassing: false,
                            },
                            comment: None,
                        },
                        Var {
                            location: 27..28,
                            name: "x",
                        },
                    ],
                },
                doc: None,
                location: 0..8,
                name: "foo",
                public: false,
                return_annotation: None,
                return_type: (),
                end_position: 29,
                on_test_failure: FailImmediately,
            },
        ),
    ],
    lines: LineNumbers {
        line_starts: [
            0,
            11,
            25,
            29,
            31,
        ],
        length: 31,
        last: Some(
            31,
        ),
    },
    kind: Validator,
}
